# mts

./: .gitattributes  .gitignore  .mtshints  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  Cargo.toml  Dockerfile  GOVERNANCE.md  HOWTOAI.md  Justfile  README.md  RELEASE.md  SECURITY.md  download_cli.ps1  download_cli.sh  flake.nix  mts-self-test.yaml  run_cross_local.md  test_acp_client.py
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  submit-recipe.yml
clippy-baselines/: too_many_lines.txt
documentation/: .mtshints  AGENTS.md  docusaurus.config.ts  package-lock.json  package.json
drawit-diagrams/: diagram-2025-12-18-1766044900450-1766044948839-1766044952474-1766044958579-1766044991604-1766044995942.drawit  diagram-2025-12-18-1766044900450-1766044948839-1766044952474-1766044958579-1766044991604.drawit  diagram-2025-12-18-1766044900450-1766044948839-1766044952474-1766044958579.drawit  diagram-2025-12-18-1766044900450-1766044948839-1766044952474.drawit  diagram-2025-12-18-1766044900450-1766044948839.drawit  diagram-2025-12-18-1766044900450.drawit
examples/: frontend_tools.py
new-branding/: colors.ts
recipe-scanner/: Dockerfile  base_recipe.yaml  config.yaml  decode-training-data.py  scan-recipe.sh
scripts/: README.md  check-no-native-tls.sh  mts-db-helper.sh  parse-benchmark-results.sh  run-benchmarks.sh  test_compaction.sh  test_lead_worker.sh  test_mcp.sh  test_providers.sh  test_subrecipes.sh  test_web.sh
(+664 files in other folders)
