[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.16.0"
authors = ["Magezi Tech Solutions"]
license = "Apache-2.0"
repository = "https://github.com/calvinmagezi/mts"
description = "MTS - An AI agent by Magezi Tech Solutions"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.9.1", features = ["schemars", "auth"] }

# Patch for Windows cross-compilation issue with crunchy
[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
